Globalisation de la mise à jours des ultramarines et des équipements